unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/FFX_Is_Running_User_s_Record__c.field-meta.xml
<CustomField>
    <fullName>FFX_Is_Running_User_s_Record__c</fullName>
    <formula>$User.Id = pse__Resource__r.pse__Salesforce_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Running User's Record</label>
    <type>Checkbox</type>
</CustomField>