unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/psa_report__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>psa_report__Estimated_Hours__c</fullName>
    <description>Task Estimated Hours</description>
    <formula>pse__Project_Task__r.pse__Estimated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>