unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/psaws__Status__c.field-meta.xml
<CustomField>
    <fullName>psaws__Status__c</fullName>
    <description>The formula field displays the status of project task assignments.</description>
    <formula>TEXT(pse__Project_Task__r.pse__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Task Status</label>
    <type>Text</type>
</CustomField>