unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__End_Date__c</fullName>
    <formula>IF(
  NOT(ISBLANK(pse__Assignment__c)),
  pse__Assignment__r.pse__End_Date__c,
  IF(NOT(ISBLANK(pse__Resource_Request__r.pse__Preferred_Schedule__c)),
     pse__Resource_Request__r.pse__Preferred_Schedule__r.pse__End_Date__c,
     pse__Resource_Request__r.pse__End_Date__c 
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>