unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__External_Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__External_Resource__c</fullName>
    <inlineHelpText>A non-PSE resource that is assigned to the project task</inlineHelpText>
    <label>External Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>