unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__Project_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_ID__c</fullName>
    <formula>pse__Project_Task__r.pse__Project__c</formula>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>