unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__Project_Task_End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Task_End_Date__c</fullName>
    <formula>pse__Project_Task__r.pse__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Task End Date</label>
    <type>Date</type>
</CustomField>