unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Schedule_Type__c</fullName>
    <formula>IF(
	NOT(ISBLANK(pse__Assignment__c)),
	$Label.pse__pta_schedule_type_assignment,
		IF(NOT(ISBLANK(pse__Resource_Request__c)),
			IF(NOT(ISBLANK(pse__Resource_Request__r.pse__Preferred_Schedule__c)),
				 	$Label.pse__pta_schedule_type_rr_schedule,
		   						 	$Label.pse__pta_schedule_type_rr_dates
		   	),
		   	$Label.pse__pta_schedule_type_rr_none
		)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Type</label>
    <type>Text</type>
</CustomField>