unpackaged/main/default/objects/pse__Project_Task_Assignment__c/validationRules/pse__Cannot_Specify_Hours_And_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Cannot_Specify_Hours_And_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( pse__Allocation_Hours__c )),NOT(ISBLANK( pse__Allocation_Percentage__c )))</errorConditionFormula>
    <errorMessage>Cannot apply both Allocation Hours and Allocation Percentage</errorMessage>
</ValidationRule>