unpackaged/main/default/objects/pse__Project_Task_Assignment__c/validationRules/pse__Cannot_Specify_Res_And_Ext_Res.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Cannot_Specify_Res_And_Ext_Res</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(pse__Resource__c)), NOT(LEN(pse__External_Resource__c)=0))</errorConditionFormula>
    <errorMessage>Cannot specify both Resource and External Resource</errorMessage>
</ValidationRule>