unpackaged/main/default/objects/pse__Project_Task_Assignment__c/validationRules/pse__PTA_RR_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__PTA_RR_Project_Mismatch</fullName>
    <active>true</active>
    <description>Validates whether the Project Task Assignment and Resource Request belong to the same Project.</description>
    <errorConditionFormula>AND( NOT(ISBLANK( pse__Resource_Request__c )), pse__Project_Task__r.pse__Project__c  &lt;&gt;  pse__Resource_Request__r.pse__Project__c)</errorConditionFormula>
    <errorMessage>We cannot associate a project task assignment with the resource request because they do not belong to the same project. Enter a different resource request and try again.</errorMessage>
</ValidationRule>