unpackaged/main/default/objects/pse__Project_Task_Assignment__c/validationRules/pse__Resc_OR_Ext_Resc_OR_Resc_Role_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Resc_OR_Ext_Resc_OR_Resc_Role_Required</fullName>
    <active>true</active>
    <description>Validation to check project task assignment cannot save without a Resource, External Resource or Resource Role.</description>
    <errorConditionFormula>AND(ISBLANK(pse__Resource__c),ISBLANK(pse__External_Resource__c),  ISBLANK(TEXT( pse__Resource_Role__c ))   )</errorConditionFormula>
    <errorMessage>We can't save a project task assignment without a Resource, External Resource or Resource Role.</errorMessage>
</ValidationRule>