unpackaged/main/default/objects/pse__Project_Task_Assignment__c/validationRules/pse__Resource_OR_External_Resource_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Resource_OR_External_Resource_Required</fullName>
    <active>false</active>
    <description>[DEPRECATED]</description>
    <errorConditionFormula>AND(ISBLANK(pse__Resource__c),ISBLANK(pse__External_Resource__c))</errorConditionFormula>
    <errorMessage>Resource or External Resource is required</errorMessage>
</ValidationRule>